--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,17 +45,13 @@ jobs:
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
 
-      - name: Build Android APK
+      - name: Make gradlew executable
         working-directory: ./android/
-        run: |
-          chmod +x ./gradlew
-          ./gradlew assembleDebug
+        run: chmod +x ./gradlew
 
-      - name: Upload APK Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-debug
-          path: android/app/build/outputs/apk/debug/app-debug.apk
+      - name: Generate the Android App assembleDebug
+        working-directory: ./android/
+        run: ./gradlew assembleDebug
 
       # Optional: Keep your push logic but make it cleaner
       - name: Push APK to Branch
