--- a/firebase.json
+++ b/firebase.json
@@ -1,9 +1,15 @@
 {
   "hosting": [
     {
+      "site": "tangerine-client-app-main",
       "public": "dist",
       "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
-      "site": "tangerine-client-app-main"
+      "rewrites": [
+        {
+          "source": "**",
+          "destination": "/index.html"
+        }
+      ]
     }
   ]
 }
