Add Initial Implementation of Webview
This will work for only 1 form 'registration-role-1' for now.

--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,10 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              }, 
+              {
+                "glob": "**/*",
+                "input": "survey-app"
               }
             ],
             "styles": [
