--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -22,15 +22,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
-            <intent-filter android:autoVerify="true">
+            <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
+
                 <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE"/>
 
               <data
-                  android:scheme="https"
-                  android:host="tangerinestaging.ustadmobile.com"
-                  android:pathPrefix="/"/>
+                android:scheme="tangerine"
+                android:host="xapi" />
             </intent-filter>
 
         </activity>
