--- a/.gitignore
+++ b/.gitignore
@@ -40,4 +40,7 @@ __screenshots__/
 
 # System files
 .DS_Store
-Thumbs.db
+
+# Environment Variables
+src/environments/environment.ts
+src/environments/environment.prod.ts
